# llm-diary

./: .gitignore  README.md  __init__.py  draft.py  llamaindex_rag.py  plots.py  prompts.py  pyproject.toml  requirements.txt
app/: diary.py
app/pages/: dashboard.py
src/: llamaindex_rag.py  nlp.py  pdf.py  plots.py
