[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm-diary"
version = "0.1.1"
description = "Keep track of your daily routine and monitor your emotions over time with our intuitive diary app."
authors = [
  { name = "arthur" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["investiment_analysis"]
force_sort_within_sections = true
